feat(Eslint): add eslint and pretierc

--- a/src/containers/Home/Home.scss
+++ b/src/containers/Home/Home.scss
@@ -1,6 +1,6 @@
 .home-page {
   h1 {
-    font-family: "Courier New", Courier, monospace;
+    font-family: 'Courier New', Courier, monospace;
   }
   line-height: 1.5;
   height: 100vh;
