--- a/src/assets/app.scss
+++ b/src/assets/app.scss
@@ -1,4 +1,4 @@
-@import "./style/normalize.css";
-@import "./style/flexboxgrid.css";
-@import "./style/var.scss";
-@import "./style/mixin.scss";
+@import './style/normalize.css';
+@import './style/flexboxgrid.css';
+@import './style/var.scss';
+@import './style/mixin.scss';
